--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,29 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.grid-container {
+  display: grid;
+  grid-template-columns: 30% 30% 40%;
+  grid-template-rows: auto;
+  grid-template-areas:
+    "one one sidebar"
+    "two three sidebar";
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.grid-sidebar {
+  grid-area: sidebar;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.grid-1 {
+  grid-area: one;
 }
 
-.App-link {
-  color: #61dafb;
+.grid-2 {
+  grid-area: two;
+  align-self: start;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid-3 {
+  grid-area: three;
+  align-self: start;
 }
